@@ -36,6 +36,15 @@
     </listitem>
 -->
     <listitem>
+      <para>2014-11-10</para>
+      <itemizedlist>
+        <listitem>
+          <para>[bdubbs] - Change default permissions for /run/lock to 1777.</para> 
+        </listitem>
+      </itemizedlist>
+    </listitem>
+
+    <listitem>
       <para>2014-11-05</para>
       <itemizedlist>
         <listitem>
